# 2DEngine

./: CMakeLists.txt
include/Core/: ApplicationContext.hpp  Constants.hpp  Types.hpp
include/Engine/: Entity.hpp
include/Engine/Components/: IComponent.hpp  InputSystem.hpp  Physics.hpp  Transform.hpp
src/: main.cpp
src/Core/: ApplicationContext.hpp  Constants.hpp  Types.hpp
src/Engine/: Entity.hpp
